--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,42 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Documentation files (generated during development)
+LAYOUT_FIXES.md
+LAYOUT_DIAGRAM.md
+MINIMALIST_DESIGN.md
+BEFORE_AFTER.md
+CODE_RENDERING_GUIDE.md
+FINAL_UPDATES.md
+COMPLETED_UPDATES.md
+LIGHT_MODE_UPDATE.md
+CHANGELOG.md
+FEATURES.md
+FEATURE_GUIDE.md
+TEST_FEATURES.md
+GIT_GUIDE.md
+
+# Plans directory
+/plans/
+
+# Memex context
+/.memex/
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# Log files
+*.log
+
+# Temporary files
+*.tmp
+*.temp
