--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@huggingface/inference": "^4.13.0",
     "@langchain/google-genai": "^1.0.0",
     "langchain": "^1.0.2",
     "next": "16.0.1",
